show current page in search result

--- a/complete-javascript-course-master/18-forkify/starter/src/sass/_searchResults.scss
+++ b/complete-javascript-course-master/18-forkify/starter/src/sass/_searchResults.scss
@@ -18,13 +18,23 @@
     display: table;
     clear: both;
   }
+  display: flex;
 
   &__btn {
     &--prev {
-      float: left;
+      // justify-content: space-between;
+      // margin: auto;
+      float: inline-start;
     }
     &--next {
-      float: right;
+      // justify-content: space-between;
+      // margin: auto;
+      float: inline-end;
+    }
+    &--mid {
+      text-align: center;
+      margin: auto;
+      cursor: default;
     }
   }
 }
